<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/nav_group_home">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home"
            android:title="@string/nav_home"/>
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/nav_group_items">
        <item
            android:id="@+id/nav_item_1"
            android:title="@string/nav_item_1"/>
        <item
            android:id="@+id/nav_item_2"
            android:title="@string/nav_item_2"/>
        <item
            android:id="@+id/nav_item_3"
            android:title="@string/nav_item_3"/>
        <item
            android:id="@+id/nav_item_4"
            android:title="@string/nav_item_4"/>
        <item
            android:id="@+id/nav_item_5"
            android:title="@string/nav_item_5"/>
        <item
            android:id="@+id/nav_item_6"
            android:title="@string/nav_item_6"/>
        <item
            android:id="@+id/nav_item_7"
            android:title="@string/nav_item_7"/>
        <item
            android:id="@+id/nav_item_8"
            android:title="@string/nav_item_8"/>
        <item
            android:id="@+id/nav_item_9"
            android:title="@string/nav_item_9"/>
        <item
            android:id="@+id/nav_item_10"
            android:title="@string/nav_item_10"/>
        <item
            android:id="@+id/nav_item_11"
            android:title="@string/nav_item_11"/>
        <item
            android:id="@+id/nav_item_12"
            android:title="@string/nav_item_12"/>
    </group>
</menu>